fix(cdba): prevent layout break due to css class name overlapse (DSCDA-2460)

--- a/apps/cdba/src/app/detail/calculations-tab/calculations-tab.component.scss
+++ b/apps/cdba/src/app/detail/calculations-tab/calculations-tab.component.scss
@@ -1,7 +1,7 @@
 :host {
   width: 100%;
 
-  .container {
+  .caclulations-tab-container {
     height: 100%;
 
     mat-card {
