--- a/apps/cdba/src/app/shared/components/tabs-header/tabs-header.component.scss
+++ b/apps/cdba/src/app/shared/components/tabs-header/tabs-header.component.scss
@@ -3,7 +3,7 @@
 :host {
   width: 100%;
 
-  .container {
+  .tabs-container {
     height: calc(100% - 20px);
     margin-top: 20px;
   }
